<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v4.view.ViewPager
        android:id="@+id/slideBreed"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <ImageView
        android:id="@+id/dogImg"
        android:visibility="gone"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:layout_marginLeft="@dimen/iconMargin"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_settings_ethernet" />


</RelativeLayout>