<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DogsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerBreed"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <android.support.v7.widget.SearchView
            style="@style/search"
            android:id="@+id/searchBreed"
            android:layout_alignTop="@+id/recyclerBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>